# SimpleDataBase

./: :w  CMakeLists.txt  Readme.md  report.txt
docs/: area.md  indexman.md  recordman.md  selection.md
include/: area.h  check.h  indexman.h  recordman.h  systemdb.h  translate.h
include/bufmanager/: BufPageManager.h
include/utils/: MyBitMap.h  pagedef.h
src/: area.cpp  checkcond.cpp  checkiterate.cpp  index_getobj.cpp  index_insert.cpp  index_remove.cpp  indexman.cpp  main.cpp  record_access.cpp  record_insert.cpp  record_remove.cpp  recordman.cpp  systemdb.cpp  translate.cpp  utils.cpp
unittests/: testfilesystem.cpp  testindexgetobj.cpp  testindexinsert.cpp  testindexremove.cpp  testrecordaccess.cpp  testrecordinsert.cpp  testrecordremove.cpp
